syntax = "proto3";

package ai.metathings.service.deviced;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message PatchDeviceRequest {
	OpDevice device = 1 [(validator.field) = {msg_exists: true}];
}

message PatchDeviceResponse {
	Device device = 1;
}
